refactor: 코드 개선
- 로또 등수 자체를 의미하는 Rank enum 클래스를 추가하고, 기존에 사용하던 WinLottoResult를 대체했다.
- WinLotto 클래스는 단순 데이터 전달 역할만 하므로 vo 패키지 하위에 이동하였다.